added French & Dutch languages

--- a/tinyMediaManager/locale/messages_fr.properties
+++ b/tinyMediaManager/locale/messages_fr.properties
@@ -13,6 +13,10 @@ Button.save=Sauvegarder
 # Button.scrape=Scrape
 Button.edit=Editer
 
+# menuitem.cut=Cut
+# menuitem.copy=Copy
+# menuitem.paste=Paste
+
 # vertical tabs (singular / plural)
 tmm.movies=Films
 tmm.movie=Film
@@ -65,6 +69,7 @@ movie.remove=Supprimer le(s) film(s) sélectionné(s)
 movie.updatemediainfo=Mise à jour des informations de(s) film(s) sélectionné(s)
 # movie.bulkedit=Bulk editing
 # movie.bulkedit.desc=Change genres, tags, movieset and watched flag for all selected movies
+# movie.rewritenfo=Rewrite NFO for selected movie(s)
 
 movie.export=Exporter le(s) film(s) sélectionné(s)
 
@@ -226,9 +231,10 @@ Settings.nofFileNaming=NFO file naming
 Settings.renamer.folder=Nom du répertoire
 Settings.renamer.file=Nom du fichier
 
-# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$Y \= Year\r\n$I \= IMDB number\r\n$E \= Sort title\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format
+# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$Y \= Year\r\n$M \= Movie set title\r\n$I \= IMDB number\r\n$E \= Sort title\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format
 # Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nIf fields are empty, the renaming will be skipped\!
 # Settings.movie.renamer.nomovie=at least one movie is needed for the example
+# Settings.movie.renamer.spacesubstitution=Replace spaces with underscores
 
 Settings.tvshow.renamer.info=à faire
 Settings.tvshow.renamer.example=à faire
@@ -250,10 +256,13 @@ Settings.tvshow.renamer.example=à faire
 # tvshow.bulkedit=Bulk editing
 # tvshow.bulkedit.desc=Change genres, tags of selected TV shows and/or watched flag, season of selected TV episodes
 # tvshow.scrapeepisodeseasondata=Scrape season & episode data
+# tvshow.update=Update TV show
+# tvshow.rewritenfo=Rewrite NFO for selected TV show(s)
 
 # tvshowepisode.scrape=Scrape episode metadata
 tvshowepisode.clone=Cloner l'épisode
 tvshowepisode.remove=Supprimer l'épisode
+# tvshowepisode.rewritenfo=Rewrite NFO for selected episode(s)
 
 # metatags
 metatag.actors=Acteurs
