--- a/tinyMediaManager/locale/messages_nl.properties
+++ b/tinyMediaManager/locale/messages_nl.properties
@@ -10,8 +10,12 @@ Button.abortqueue=Wachtrij afbreken
 Button.close=Sluiten
 Button.search=Zoeken
 Button.save=Opslaan
-# Button.scrape=Scrape
+Button.scrape=Scrape
 # Button.edit=Edit
+
+# menuitem.cut=Cut
+# menuitem.copy=Copy
+# menuitem.paste=Paste
 
 # vertical tabs (singular / plural)
 tmm.movies=Films
@@ -41,11 +45,11 @@ tmm.searchfield=Zoeken...
 # tmm.errorlogs=Show error log
 
 status.activethreads=actieve threads
-# status.queuesize=Queue\:
+status.queuesize=Wachtlijst\:
 
 # menu & popup on rightclick
 onlyoneoperation=Maar één handeling tegelijk toegestaan
-# update.datasource=Update data sources
+update.datasource=Bronnen bijwerken
 # update.datasource.unavailable=Datasource {} not available - skipping
 # export.detail=Template contains detail pages
 # export.setdestination=Set export destination
@@ -65,6 +69,7 @@ movie.remove=Verwijder geselecteerd film(s)
 movie.updatemediainfo=Media informatie van geselecteerde film(s) bijwerken
 movie.bulkedit=Bulk bewerken
 movie.bulkedit.desc=Genres, tags, filmset en bekeken indicator voor geselecteerde films wijzigen
+# movie.rewritenfo=Rewrite NFO for selected movie(s)
 
 movie.export=Geselecteerd film(s) exporteren
 
@@ -77,19 +82,19 @@ movie.change=Wijzig film
 
 movieset.add.desc=Film set toevoegen
 movieset.remove.desc=Verwijder geselecteerde film set
-# movieset.title=Movieset title\:
-# movieset.search=Search TMDB for movieset metadata
-# movieset.tmdb.find=Find TmdbId
-# movieset.tmdb.desc=Find TmdbId for this movie
-# movieset.tmdb.error=Sorry, no TmdbId could be found. Try to search for the movieset
-# movieset.edit=Edit movieset
-# movieset.parts=Movieset parts
-# movieset.movie.assign=Assign movies to this movieset
+movieset.title=Filmset titel\:
+movieset.search=Zoek bij TMDB naar filmset metadata
+movieset.tmdb.find=Zoek TMDBid
+movieset.tmdb.desc=Zoek TMDBid voor deze film
+movieset.tmdb.error=Sorry, geen TMDBid gevonden. Probeer zoekopdracht voor filmset
+movieset.edit=Filmset bewerken
+movieset.parts=Delen in filmset
+movieset.movie.assign=Films aan filmset toevoegen
 # movieset.movie.matched=matched movie
-# movieset.movie.remove=Remove marked movie from movieset
-# movieset.movie.moveup=Move marked movie up
-# movieset.movie.movedown=Move marked movie down
-# movieset.save.desc=Save movie set metadata
+movieset.movie.remove=Geselecteerd film uit filmset verwijderen
+movieset.movie.moveup=Geselecteerd film omhoog verplaatsen
+movieset.movie.movedown=Geselecteerd film omlaag verplaatsen
+movieset.save.desc=Filmset metadata opslaan
 
 cast.actor.add=Nieuwe acteur toevoegen
 cast.actor.remove=Acteur verwijderen
@@ -108,7 +113,7 @@ image.choose=Afbeelding selecteren
 image.choose.file=Bestand selecteren
 image.choose.fanart=Fanart selecteren
 image.choose.poster=Poster selecteren
-# image.choose.banner=Choose banner
+image.choose.banner=Banner selecteren
 # image.choose.season=Choose season poster
 image.extrathumbs.markall=Selecteer alle extrathumbs
 image.extrathumbs.unmarkall=Deselecteer alle extrathumbs
@@ -164,10 +169,10 @@ Feedback.send.ok=Feedback verzonden
 
 # settings menu (linebreaks with html)
 Settings.movies=Films
-# Settings.scraper=<html><center>Movies -<br>Scraper</center></html>
-# Settings.images=<html><center>Movies -<br>Images</center></html>
-# Settings.tvshow=Tv Shows
-# Settings.tvshowscraper=<html><center>Tv Shows -<br>Scraper</center></html>
+Settings.scraper=<html><center>Film -<br>Scraper</center></html>
+Settings.images=<html><center>Film -<br>Afbeeldingen</center></html>
+Settings.tvshow=TV Shows
+Settings.tvshowscraper=<html><center>Tv Show -<br>Scraper</center></html>
 Settings.general=Algemeen
 
 # general settings
@@ -212,7 +217,7 @@ Settings.default.autoscrape=Afbeeldingen automatisch scrapen (zonder selectie)
 # Settings.movie.datasource=Datasources
 # Settings.movie.datasource.remove.info=If you remove %s from your data sources, all movies inside this path will also be removed. Continue?
 
-# Settings.datasource.folderchooser=Add datasource
+Settings.datasource.folderchooser=Bron toevoegen
 Settings.datasource.remove=Databron verwijderen
 
 Settings.nfoFormat=NFO format
@@ -226,16 +231,17 @@ Settings.renamer=Hernoemer
 Settings.renamer.folder=Map naam
 Settings.renamer.file=Bestandsnaam
 
-# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$Y \= Year\r\n$I \= IMDB number\r\n$E \= Sort title\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format
+# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$Y \= Year\r\n$M \= Movie set title\r\n$I \= IMDB number\r\n$E \= Sort title\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format
 # Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nIf fields are empty, the renaming will be skipped\!
 # Settings.movie.renamer.nomovie=at least one movie is needed for the example
+# Settings.movie.renamer.spacesubstitution=Replace spaces with underscores
 
 # Settings.tvshow.renamer.info=ToDo
 # Settings.tvshow.renamer.example=ToDo
 
 # tv show settings
-# Settings.tvshowdatasource=TV show datasources
-# Settings.tvshowdatasource.folderchooser=add TV show datasource
+Settings.tvshowdatasource=TV show databronnen
+Settings.tvshowdatasource.folderchooser=TV show databron toevoegen
 # Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, all TV shows and episodes inside this path will also be removed. Continue?
 
 # tv shows
@@ -250,10 +256,13 @@ Settings.renamer.file=Bestandsnaam
 # tvshow.bulkedit=Bulk editing
 # tvshow.bulkedit.desc=Change genres, tags of selected TV shows and/or watched flag, season of selected TV episodes
 # tvshow.scrapeepisodeseasondata=Scrape season & episode data
+# tvshow.update=Update TV show
+# tvshow.rewritenfo=Rewrite NFO for selected TV show(s)
 
-# tvshowepisode.scrape=Scrape episode metadata
+tvshowepisode.scrape=Metadata aflevering scrapen
 # tvshowepisode.clone=Clone episode
 # tvshowepisode.remove=Remove episode
+# tvshowepisode.rewritenfo=Rewrite NFO for selected episode(s)
 
 # metatags
 # metatag.actors=Actors
@@ -304,12 +313,12 @@ metatag.spokenlanguages=Gesproken taal
 # metatag.stream=Stream
 # metatag.studio=Studio
 # metatag.subtitle=Subtitle
-# metatag.subtitles=Subtitles
+metatag.subtitles=Ondertitels
 metatag.tagline=Tagline
 metatag.tags=Tags
 # metatag.title=Title
 metatag.tmdb=TMDB Id
-# metatag.tvdb=TheTvDB Id
+metatag.tvdb=TheTvDB Id
 # metatag.tvshow=TV show
 # metatag.tvshows=TV shows
 metatag.trailer=Trailer
@@ -346,9 +355,9 @@ metatag.trailer=Trailer
 moviechooser.search=Zoek film
 # tvshowchooser.search=Search TV show
 
-# movieextendedsearch.options=Extended filter and sort options
+movieextendedsearch.options=Uitgebreide filter en sorteer opties
 movieextendedsearch.filterby=Filter
-# movieextendedsearch.duplicates=Show duplicates
+movieextendedsearch.duplicates=Toon duplicaten
 movieextendedsearch.watched=Bekeken indicator
 movieextendedsearch.genre=Genre
 movieextendedsearch.cast=Cast lid
