updated german translation

--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -13,6 +13,10 @@ Button.save=Speichern
 Button.scrape=Scrape
 Button.edit=Bearbeiten
 
+menuitem.cut=Ausschneiden
+menuitem.copy=Kopieren
+menuitem.paste=Einfügen
+
 # vertical tabs (singular / plural)
 tmm.movies=Filme
 tmm.movie=Film
@@ -60,11 +64,13 @@ movie.scrape.unscraped=Alle ungescrapten Filme suchen & scrapen - nimm besten Tr
 movie.scrape.unscraped.desc=Alle ungescrapten Filme suchen & scrapen - nimm besten Treffer
 movie.scrape.metadata=Metadaten von ausgewählten Filmen scrapen
 movie.scrape.metadata.desc=Metadaten von ausgewählten Filmen scrapen
+movie.scrape.nomatchfound=Kein entsprechender Film bei der Suche gefunden
 movie.remove=Ausgewählte Filme entfernen
 movie.rename=Umbenennen / Cleanup ausgewählter Filme
 movie.updatemediainfo=Medianinformationen aus ausgewählten Filmen neu einlesen
 movie.bulkedit=Mehrfach bearbeiten
 movie.bulkedit.desc=Ändere Genres, Markierungen, Film Sets und gesehen/ungesehen für alle selektierten Filme
+movie.rewritenfo=NFO für ausgewählte Filme neu schreiben
 
 movie.export=Exportiere Filmliste(n) von selektierten Filmen
 
@@ -251,10 +257,13 @@ tvshow.change=Wechsle TV Show
 tvshow.bulkedit=Mehrfach bearbeiten
 tvshow.bulkedit.desc=Genres, Tags, Saison und 'Gesehen' Markierung von ausgewählten TV Shows ändern
 tvshow.scrapeepisodeseasondata=Saison & Episoden Metadaten scrapen
+tvshow.update=TV Show updaten
+tvshow.rewritenfo=NFO für ausgewählte Filme neu schreiben
 
 tvshowepisode.scrape=Scrape Episoden Metadaten
 tvshowepisode.clone=Episode kopieren
 tvshowepisode.remove=Episode entfernen
+tvshowepisode.rewritenfo=NFO für ausgewählte Filme neu schreiben
 
 # metatags
 metatag.actors=Schauspieler
