further work on TvShowRenamer - WIP fix german translation

--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -258,12 +258,12 @@ tvshow.bulkedit=Mehrfach bearbeiten
 tvshow.bulkedit.desc=Genres, Tags, Saison und 'Gesehen' Markierung von ausgewählten TV Shows ändern
 tvshow.scrapeepisodeseasondata=Saison & Episoden Metadaten scrapen
 tvshow.update=TV Show updaten
-tvshow.rewritenfo=NFO für ausgewählte Filme neu schreiben
+tvshow.rewritenfo=NFO für ausgewählte TV Show(s) neu schreiben
 
 tvshowepisode.scrape=Scrape Episoden Metadaten
 tvshowepisode.clone=Episode kopieren
 tvshowepisode.remove=Episode entfernen
-tvshowepisode.rewritenfo=NFO für ausgewählte Filme neu schreiben
+tvshowepisode.rewritenfo=NFO für ausgewählte Episode(n) neu schreiben
 
 # metatags
 metatag.actors=Schauspieler
