--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -259,6 +259,7 @@ tvshow.bulkedit.desc=Change genres, tags of selected TV shows and/or watched fla
 tvshow.scrapeepisodeseasondata=Scrape season & episode data
 tvshow.update=Update TV show 
 tvshow.rewritenfo=Rewrite NFO for selected TV show(s)
+tvshow.rename=Rename/cleanup selected TV show(s)
 
 tvshowepisode.scrape=Scrape episode metadata
 tvshowepisode.clone=Clone episode
