--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -249,6 +249,7 @@ Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, al
 tvshow.scrape.selected=Search & scrape selected TV show(s)
 tvshow.scrape.selected.force=Search & scrape selected TV show(s) - force best match
 tvshow.scrape.selected.force.desc=Search & scrape selected TV show(s) without user interaction; forces best match
+tvshow.scrape.nomatchfound=No suitable TV show found during search
 tvshow.edit=Edit selected TV show(s)/episode(s)
 tvshow.edit.abortqueue.desc=Abort editing all selected TV shows
 tvshow.remove=Remove selected TV show(s)/episode(s)
