feature: added searching for specials changed tv show scraper API

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -269,6 +269,7 @@ tvshowepisode.scrape=Scrape episode metadata
 tvshowepisode.clone=Clone episode
 tvshowepisode.remove=Remove episode
 tvshowepisode.rewritenfo=Rewrite NFO for selected episode(s)
+tvshowepisode.choose=Choose an episode
 
 # metatags
 metatag.actors=Actors
@@ -362,6 +363,7 @@ chooser.scrape=Scrape following items
 
 moviechooser.search=Search movie
 tvshowchooser.search=Search TV show
+tvshowepisodechooser.search=Search episode
 
 movieextendedsearch.options=Extended filter and sort options
 movieextendedsearch.filterby=filter by
@@ -392,6 +394,7 @@ message.scrape.movieartworkfailed=Failed getting artwork for movie
 message.scrape.tvshowartworkfailed=Failed getting artwork for tv show
 message.scrape.movietrailerfailed=Failed getting trailers for movie
 message.scrape.threadcrashed=Scraping failed{} {}
+message.scrape.tvshowepisodefailed=Failed getting episode metadata - try to search for the right episode
 
 message.artwork.threadcrashed=Downloading artwork failed{} {}
 
