added changing of UI language to settings

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -188,6 +188,8 @@ Settings.imagecache=Enable image cache
 Settings.imagecachetype=Image cache type
 Settings.imagecachebackground=Automatically build image cache in background
 Settings.loglevel=Loglevel
+Settings.language=UI Language
+Settings.languagehint=The language will be changed after restart! 
 
 # image settings
 Settings.poster=Poster and Fanart
