--- a/tinyMediaManager/locale/messages_fr.properties
+++ b/tinyMediaManager/locale/messages_fr.properties
@@ -64,6 +64,7 @@ edit.discard=Annuler les changements
 # movie.scrape.unscraped.desc=Search & scrape all unscraped movie(s) without user interaction; forces best match
 # movie.scrape.metadata=Scrape metadata for selected movie(s)
 # movie.scrape.metadata.desc=Scrape metadata for selected movie(s)
+# movie.scrape.nomatchfound=No suitable movie found during search
 movie.remove=Supprimer le(s) film(s) sélectionné(s)
 # movie.rename=Rename/cleanup selected movie(s)
 movie.updatemediainfo=Mise à jour des informations de(s) film(s) sélectionné(s)
@@ -187,6 +188,8 @@ Settings.cache=Cache
 # Settings.imagecachetype=Image cache type
 # Settings.imagecachebackground=Automatically build image cache in background
 # Settings.loglevel=Loglevel
+# Settings.language=UI Language
+# Settings.languagehint=The language will be changed after restart\!
 
 # image settings
 # Settings.poster=Poster and Fanart
@@ -230,8 +233,11 @@ Settings.nofFileNaming=NFO file naming
 # Settings.renamer=Renamer
 Settings.renamer.folder=Nom du répertoire
 Settings.renamer.file=Nom du fichier
+# Settings.cleanupoptions=Cleanup options
+# Settings.renamer.removenfo=remove all other NFOs
+# Settings.example=Example
 
-# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$Y \= Year\r\n$M \= Movie set title\r\n$I \= IMDB number\r\n$E \= Sort title\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format
+# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movie set title\r\n$I \= IMDB number\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format
 # Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nIf fields are empty, the renaming will be skipped\!
 # Settings.movie.renamer.nomovie=at least one movie is needed for the example
 # Settings.movie.renamer.spacesubstitution=Replace spaces with underscores
@@ -245,9 +251,11 @@ Settings.tvshow.renamer.example=à faire
 # Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, all TV shows and episodes inside this path will also be removed. Continue?
 
 # tv shows
+# tvshow.scrape.newitems=Scrape new items
 # tvshow.scrape.selected=Search & scrape selected TV show(s)
 # tvshow.scrape.selected.force=Search & scrape selected TV show(s) - force best match
 # tvshow.scrape.selected.force.desc=Search & scrape selected TV show(s) without user interaction; forces best match
+# tvshow.scrape.nomatchfound=No suitable TV show found during search
 # tvshow.edit=Edit selected TV show(s)/episode(s)
 # tvshow.edit.abortqueue.desc=Abort editing all selected TV shows
 # tvshow.remove=Remove selected TV show(s)/episode(s)
@@ -258,11 +266,13 @@ Settings.tvshow.renamer.example=à faire
 # tvshow.scrapeepisodeseasondata=Scrape season & episode data
 # tvshow.update=Update TV show
 # tvshow.rewritenfo=Rewrite NFO for selected TV show(s)
+# tvshow.rename=Rename/cleanup selected TV show(s)
 
 # tvshowepisode.scrape=Scrape episode metadata
 tvshowepisode.clone=Cloner l'épisode
 tvshowepisode.remove=Supprimer l'épisode
 # tvshowepisode.rewritenfo=Rewrite NFO for selected episode(s)
+# tvshowepisode.choose=Choose an episode
 
 # metatags
 metatag.actors=Acteurs
@@ -272,6 +282,7 @@ metatag.audio=Audio
 # metatag.cast=Cast
 metatag.certification=Certification
 metatag.codec=Codec
+# metatag.country=Country
 metatag.dateadded=Date ajoutée
 metatag.details=Détails
 metatag.details2=Détails 2
@@ -300,6 +311,7 @@ metatag.production=Production
 # metatag.premiered=Premiered
 metatag.quality=Qualité
 metatag.rating=Evaluation
+# metatag.releasedate=Release date
 metatag.resolution=Résolution
 metatag.role=Rôle
 # metatag.runtime=Runtime
@@ -354,6 +366,7 @@ chooser.searchresult=Résultat de la recherche
 
 moviechooser.search=Recherche de film
 # tvshowchooser.search=Search TV show
+# tvshowepisodechooser.search=Search episode
 
 # movieextendedsearch.options=Extended filter and sort options
 movieextendedsearch.filterby=filtré par
@@ -384,6 +397,7 @@ summarywindow.title=Résumé
 # message.scrape.tvshowartworkfailed=Failed getting artwork for tv show
 # message.scrape.movietrailerfailed=Failed getting trailers for movie
 # message.scrape.threadcrashed=Scraping failed{} {}
+# message.scrape.tvshowepisodefailed=Failed getting episode metadata - try to search for the right episode
 
 # message.artwork.threadcrashed=Downloading artwork failed{} {}
 
