--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -188,6 +188,8 @@ Settings.imagecache=Bilder Cache aktivieren
 Settings.imagecachetype=Bildercache Typ
 Settings.imagecachebackground=Bildercache automatisch im Hintergrund aufbauen
 Settings.loglevel=Loglevel
+Settings.language=UI Sprache
+Settings.languagehint=Die Sprache wird bei beim nächsten Start geändert
 
 # image settings
 Settings.poster=Poster und Fanart
@@ -231,8 +233,11 @@ Settings.sorting.info=Präfix auswählen, welcher die Sortierung der Liste beein
 Settings.renamer=Film Dateien umbenennen
 Settings.renamer.folder=Verzeichnis
 Settings.renamer.file=Dateiname
+Settings.cleanupoptions=Cleanup Optionen
+Settings.renamer.removenfo=alle anderen NFOs entfernen
+Settings.example=Beispiel
 
-Settings.movie.renamer.info=Verfügbare Werte\n$T \= Titel\n$O \= Original Titel\n$1 \= Erster Buchstabe des Titels\n$Y \= Jahr\n$M \= Filmset Titel\n$I \= IMDB Nummer\n$E \= Titel sortiert\n$R \= Video Auflösung\n$A \= Audio Codec + Kanäle\n$V \= Video Codec + Format
+Settings.movie.renamer.info=Verfügbare Werte\n$T \= Titel\n$O \= Original Titel\n$1 \= Erster Buchstabe des Titels\n$E \= Titel sortiert\n$2 \= Erster Buchstabe des sortierten Titels\n$Y \= Jahr\n$M \= Filmset Titel\n$I \= IMDB Nummer\n$R \= Video Auflösung\n$A \= Audio Codec + Kanäle\n$V \= Video Codec + Format
 Settings.movie.renamer.example=Wähle die Namensvorlage für Dateien und Ordner.\nWenn leer, wird das Umbenennen übersprungen.
 Settings.movie.renamer.nomovie=brauche wenigstens einen (gescrapten) Film für die Vorschau
 Settings.movie.renamer.spacesubstitution=Leerzeichen mit _ ersetzen
@@ -246,9 +251,11 @@ Settings.tvshowdatasource.folderchooser=neuen TV Show Ordner hinzufügen
 Settings.tvshowdatasource.remove.info=Wenn %s entfernt wird, werden auch alle TV Shows und Episoden aus der DB entfernt. Weitermachen?
 
 # tv shows
+tvshow.scrape.newitems=Neu gefundene Dateien scrapen
 tvshow.scrape.selected=Suchen & Scrapen aller ausgewählten TV Shows
 tvshow.scrape.selected.force=Suchen und Scrapen von ausgewählten TV Shows - automatisch besten Treffer nehmen
 tvshow.scrape.selected.force.desc=Automatisch Suchen & Scrapen aller ausgewählten TV Shows - nimm besten Treffer
+tvshow.scrape.nomatchfound=Keine entsprechende TV show bei der Suche gefunden
 tvshow.edit=Ausgewählte TV Show(s)/Episode(s) bearbeiten
 tvshow.edit.abortqueue.desc=Breche Bearbeitung aller selektierten TV Shows ab
 tvshow.remove=Ausgewählte TV Show(s) / Episoden entfernen
@@ -259,11 +266,13 @@ tvshow.bulkedit.desc=Genres, Tags, Saison und 'Gesehen' Markierung von ausgewäh
 tvshow.scrapeepisodeseasondata=Saison & Episoden Metadaten scrapen
 tvshow.update=TV Show updaten
 tvshow.rewritenfo=NFO für ausgewählte TV Show(s) neu schreiben
+tvshow.rename=Umbenennen / Cleanup ausgewählter TV Shows/Episoden
 
 tvshowepisode.scrape=Scrape Episoden Metadaten
 tvshowepisode.clone=Episode kopieren
 tvshowepisode.remove=Episode entfernen
 tvshowepisode.rewritenfo=NFO für ausgewählte Episode(n) neu schreiben
+tvshowepisode.choose=Episode auswählen
 
 # metatags
 metatag.actors=Schauspieler
@@ -273,6 +282,7 @@ metatag.audio=Audio
 metatag.cast=Besetzung
 metatag.certification=Altersbeschränkung
 metatag.codec=Codec
+metatag.country=Land
 metatag.dateadded=hinzugefügt am
 metatag.details=Detail
 metatag.details2=Detail 2
@@ -301,6 +311,7 @@ metatag.production=Produktion
 metatag.premiered=Erstausstrahlung
 metatag.quality=Qualität
 metatag.rating=Bewertung
+metatag.releasedate=Erscheinungsdatum
 metatag.resolution=Auflösung
 metatag.role=Rolle
 metatag.runtime=Laufzeit
@@ -355,6 +366,7 @@ chooser.scrape=Scrape folgende Daten
 
 moviechooser.search=Film suchen
 tvshowchooser.search=Suche TV Show
+tvshowepisodechooser.search=Episode suchen
 
 movieextendedsearch.options=Erweiterte Filter und Sortierungsmöglichkeiten
 movieextendedsearch.filterby=filtern nach
@@ -385,6 +397,7 @@ message.scrape.movieartworkfailed=Fehler beim Holen der Artworks
 message.scrape.tvshowartworkfailed=Fehler beim Herunterladen der Artwork Bilder
 message.scrape.movietrailerfailed=Fehler beim Holen der Trailer
 message.scrape.threadcrashed=Fehler beim Scrapen {} {}
+message.scrape.tvshowepisodefailed=Konnte keine Episodendaten ermitteln - bitte manuell suchen
 
 message.artwork.threadcrashed=Fehler beim Herunterladen von Artwork {} {}
 
