--- a/tinyMediaManager/locale/messages_fr.properties
+++ b/tinyMediaManager/locale/messages_fr.properties
@@ -266,7 +266,7 @@ Settings.tvshow.renamer.example=à faire
 # tvshow.scrapeepisodeseasondata=Scrape season & episode data
 # tvshow.update=Update TV show
 # tvshow.rewritenfo=Rewrite NFO for selected TV show(s)
-# tvshow.rename=Rename/cleanup selected TV show(s)
+# tvshow.rename=Rename/cleanup selected TV show(s)/episode(s)
 
 # tvshowepisode.scrape=Scrape episode metadata
 tvshowepisode.clone=Cloner l'épisode
