--- a/tinyMediaManager/locale/messages_nl.properties
+++ b/tinyMediaManager/locale/messages_nl.properties
@@ -66,7 +66,7 @@ movie.scrape.metadata=Scrape metadata voor geselecteerd film(s)
 movie.scrape.metadata.desc=Scrape metadata voor geselecteerd film(s)
 movie.scrape.nomatchfound=Geen geschikte film gevonden tijdens het zoeken
 movie.remove=Verwijder geselecteerd film(s)
-movie.rename=Hernoem/opschonen geselecteerde film(s)
+movie.rename=Geselecteerde film(s) hernoemen/opschonen 
 movie.updatemediainfo=Media informatie van geselecteerde film(s) bijwerken
 movie.bulkedit=Bulk bewerken
 movie.bulkedit.desc=Wijzig genres, tags, filmset en bekeken indicator voor geselecteerde films
@@ -184,7 +184,7 @@ Settings.proxyuser=Gebruikersnaam
 Settings.proxypass=Wachtwoord
 Settings.clearhttpcache=Wis HTTP cache bij afsluiten
 Settings.cache=Cache
-Settings.imagecache=Zet afbeelding cache aan
+Settings.imagecache=Activeer afbeelding cache
 Settings.imagecachetype=Afbeelding cache type
 Settings.imagecachebackground=Herbouw afbeelding cache automatisch in achtergrond
 Settings.loglevel=Loglevel
@@ -213,7 +213,7 @@ Settings.movieset.folderchooser=Filmset artwork map selecteren
 # scraper settings
 Settings.getfromTMDB=Plot/Titel/Tagline van TMDB
 Settings.preferredLanguage=Voorkeurstaal
-Settings.certificationCountry=Certification country
+Settings.certificationCountry=Certificatie land
 Settings.default.autoscrape=Afbeeldingen automatisch scrapen (zonder selectie)
 
 # movie settings
@@ -229,16 +229,16 @@ Settings.videofiletypes=Video bestandtypes
 Settings.extrafiletypes=Ondertitel en extra bestandtypes
 Settings.audiofiletypes=Audio bestandtypes
 Settings.sorting=Titel sorteren
-Settings.sorting.info=Kies voorvoegsels. Heeft invloed op de sorteer volgorde van de lijsten .⏎\n⏎\nVoorbeeld\: The⏎\n'The Bourne Identity' wordt getoond als 'Bourne Identity, The'⏎\n⏎\nWis de lijst om deze functie uit te schakelen
-Settings.renamer=Hernoemer
+Settings.sorting.info=Kies voorvoegsels. Heeft invloed op de sorteer volgorde van de lijsten .\n\nVoorbeeld\: The\n'The Bourne Identity' wordt getoond als 'Bourne Identity, The'\n\nWis de lijst om deze functie uit te schakelen
+Settings.renamer=Naam Aanpasser
 Settings.renamer.folder=Map naam
 Settings.renamer.file=Bestandsnaam
 Settings.cleanupoptions=Opschoon opties
 Settings.renamer.removenfo=wis alle andere NFO's
 Settings.example=Voorbeeld
 
-Settings.movie.renamer.info=Beschikbare methodes\:\n$T \= Titel\n$O \= Originele titel\n$1 \= Eerste letter van titel\n$E \= Sorteer titel\n$2 \= Eerste letter van Sorteer titel\n$Y \= Jaar\n$M \= Film set title\n$I \= IMDB nummer\n$R \= Video resolutie\n$A \= Audio code + kanalen\n$V \= Video code + formaat
-Settings.movie.renamer.example=Kies een map en bestand hernoem methode.\nHernoemen wordt overgeslagen bij lege velden\!
+Settings.movie.renamer.info=Beschikbare patronen\:\n$T \= Titel\n$O \= Originele titel\n$1 \= Eerste letter van titel\n$E \= Sorteer titel\n$2 \= Eerste letter van Sorteer titel\n$Y \= Jaar\n$M \= Film set title\n$I \= IMDB nummer\n$R \= Video resolutie\n$A \= Audio code + kanalen\n$V \= Video code + formaat
+Settings.movie.renamer.example=Kies een hernoem patroon voor de map en bestand \nHernoemen wordt overgeslagen bij lege velden\!
 Settings.movie.renamer.nomovie=tenmiste één film is nodig voor het voorbeeld
 Settings.movie.renamer.spacesubstitution=Vervang spaties door underscore
 
@@ -266,7 +266,7 @@ tvshow.bulkedit.desc=Verander genres, tags en/of gezien flag, seizoen van gesele
 tvshow.scrapeepisodeseasondata=Scrape seizoen & aflevering data
 tvshow.update=Update TV serie
 tvshow.rewritenfo=Herschrijf NFO voor geselecteerde TV serie(s)
-tvshow.rename=Hernoem/schoon op geselecteerde TV serie(s)
+tvshow.rename=Geselecteerde TV serie(s)/aflevering(en) hernoemen/opschonen
 
 tvshowepisode.scrape=Metadata aflevering scrapen
 tvshowepisode.clone=Dupliceer aflevering
