--- a/tinyMediaManager/locale/messages_cs.properties
+++ b/tinyMediaManager/locale/messages_cs.properties
@@ -266,7 +266,7 @@ Settings.renamer.file=Jméno souboru
 # tvshow.scrapeepisodeseasondata=Scrape season & episode data
 # tvshow.update=Update TV show
 # tvshow.rewritenfo=Rewrite NFO for selected TV show(s)
-# tvshow.rename=Rename/cleanup selected TV show(s)
+# tvshow.rename=Rename/cleanup selected TV show(s)/episode(s)
 
 # tvshowepisode.scrape=Scrape episode metadata
 # tvshowepisode.clone=Clone episode
