--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -248,7 +248,7 @@ Settings.tvshow.renamer.example=ToDo
 # tv show settings
 Settings.tvshowdatasource=TV show datasources
 Settings.tvshowdatasource.folderchooser=add TV show datasource
-Settings.tvshowdatasource.remove.info="If you remove %s from your datasources, all TV shows and episodes inside this path will be removed from the database. Continue?
+Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, all TV shows and episodes inside this path will be removed from the database. Continue?
 
 # tv shows
 tvshow.scrape.newitems=Scrape new items
