--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -218,7 +218,7 @@ Settings.default.autoscrape=Automatisch Bilder herunterladen (ohne manueller Aus
 
 # movie settings
 Settings.movie.datasource=Film Verzeichnis
-Settings.movie.datasource.remove.info=Wenn Du den Pfad %s entfernst, werden auch alle Filme mit dem Pfad aus der DB entfernt. Weitermachen?
+Settings.movie.datasource.remove.info=Wenn du %s von den Datenordnern entfernst, werden alle Filme in diesem Pfad aus der Datenbank entfernt. Weitermachen?
 
 Settings.datasource.folderchooser=Film Verzeichnis hinzufügen
 Settings.datasource.remove=Film Verzeichnis entfernen
@@ -248,7 +248,7 @@ Settings.tvshow.renamer.example=ToDo
 # tv show settings
 Settings.tvshowdatasource=TV Show Ordner
 Settings.tvshowdatasource.folderchooser=neuen TV Show Ordner hinzufügen
-Settings.tvshowdatasource.remove.info=Wenn %s entfernt wird, werden auch alle TV Shows und Episoden aus der DB entfernt. Weitermachen?
+Settings.tvshowdatasource.remove.info=Wenn du %s von den Datenordnern entfernst, werden alle TV Shows und Episoden in diesem Pfad aus der Datenbank entfernt. Weitermachen?
 
 # tv shows
 tvshow.scrape.newitems=Neu gefundene Dateien scrapen
