--- a/tinyMediaManager/locale/messages_fr.properties
+++ b/tinyMediaManager/locale/messages_fr.properties
@@ -218,7 +218,7 @@ Settings.preferredLanguage=Langue préférée
 
 # movie settings
 # Settings.movie.datasource=Datasources
-# Settings.movie.datasource.remove.info=If you remove %s from your data sources, all movies inside this path will also be removed. Continue?
+# Settings.movie.datasource.remove.info=If you remove %s from your datasources, all movies inside this path will be removed from the database. Continue?
 
 # Settings.datasource.folderchooser=Add datasource
 # Settings.datasource.remove=Remove datasource
@@ -248,7 +248,7 @@ Settings.tvshow.renamer.example=à faire
 # tv show settings
 # Settings.tvshowdatasource=TV show datasources
 # Settings.tvshowdatasource.folderchooser=add TV show datasource
-# Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, all TV shows and episodes inside this path will also be removed. Continue?
+# Settings.tvshowdatasource.remove.info="If you remove %s from your datasources, all TV shows and episodes inside this path will be removed from the database. Continue?
 
 # tv shows
 # tvshow.scrape.newitems=Scrape new items
