--- a/tinyMediaManager/locale/messages_nl.properties
+++ b/tinyMediaManager/locale/messages_nl.properties
@@ -218,7 +218,7 @@ Settings.default.autoscrape=Afbeeldingen automatisch scrapen (zonder selectie)
 
 # movie settings
 Settings.movie.datasource=Databronnen
-Settings.movie.datasource.remove.info=Als je %s van de databronnen verwijderd worden ook alle films binnen dit pad verwijderd. Doorgaan?
+Settings.movie.datasource.remove.info=Als je %s van de databronnen verwijderd worden alle films binnen dit pad uit de database verwijderd. Doorgaan?
 
 Settings.datasource.folderchooser=Bron toevoegen
 Settings.datasource.remove=Databron verwijderen
@@ -248,7 +248,7 @@ Settings.tvshow.renamer.example=Te doen
 # tv show settings
 Settings.tvshowdatasource=TV show databronnen
 Settings.tvshowdatasource.folderchooser=TV show databron toevoegen
-Settings.tvshowdatasource.remove.info=Als je %s van de databronnen verwijderd worden ook alle TV Series en afleveringen binnen dit pad verwijderd. Doorgaan?
+Settings.tvshowdatasource.remove.info=Als je %s van de databronnen verwijderd worden alle TV Series en afleveringen binnen dit pad uit de database verwijderd. Doorgaan?
 
 # tv shows
 tvshow.scrape.newitems=Scrape nieuwe onderdelen
