--- a/tinyMediaManager/locale/messages_pt.properties
+++ b/tinyMediaManager/locale/messages_pt.properties
@@ -218,7 +218,7 @@ Settings.default.autoscrape=buscar imagens automaticamente (sem seleção)
 
 # movie settings
 Settings.movie.datasource=Fontes
-Settings.movie.datasource.remove.info=Se você remover %s de suas fontes, todos os filmes neste caminho serão removidos. Continuar?
+# Settings.movie.datasource.remove.info=If you remove %s from your datasources, all movies inside this path will be removed from the database. Continue?
 
 Settings.datasource.folderchooser=Adicionar fonte
 Settings.datasource.remove=Remover fonte de dados
@@ -248,7 +248,7 @@ Settings.tvshow.renamer.example=A Fazer
 # tv show settings
 Settings.tvshowdatasource=Fonte de programa de Tv
 Settings.tvshowdatasource.folderchooser=Adicionar fonte de programa de Tv
-Settings.tvshowdatasource.remove.info=Se você remover %s das fontes, todos os programas de TV e episódios dentro do caminho serão removidos. Continuar?
+# Settings.tvshowdatasource.remove.info="If you remove %s from your datasources, all TV shows and episodes inside this path will be removed from the database. Continue?
 
 # tv shows
 tvshow.scrape.newitems=Buscar novos itens
