added new movieset renaming token $N (title)

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -237,7 +237,7 @@ Settings.cleanupoptions=Cleanup options
 Settings.renamer.removenfo=remove all other NFOs
 Settings.example=Example
 
-Settings.movie.renamer.info=Available pattern:\r\n$T = Title\r\n$O = OriginalTitle\r\n$1 = first letter of the title\r\n$E = Sort title\r\n$2 = first letter of sort title\r\n$Y = Year\r\n$M = Movie set title\r\n$I = IMDB number\r\n$R = Video resolution\r\n$A = audio code + channels\r\n$V = video code + format
+Settings.movie.renamer.info=Available pattern:\r\n$T = Title\r\n$O = OriginalTitle\r\n$1 = first letter of the title\r\n$E = Sort title\r\n$2 = first letter of sort title\r\n$Y = Year\r\n$M = Movieset title (sort title)\r\n$N = Movieset title\r\n$I = IMDB number\r\n$R = Video resolution\r\n$A = audio code + channels\r\n$V = video code + format
 Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nIf fields are empty, the renaming will be skipped!
 Settings.movie.renamer.nomovie=at least one movie is needed for the example
 Settings.movie.renamer.spacesubstitution=Replace spaces with underscores
