--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -264,7 +264,7 @@ tvshow.change=Change TV show
 tvshow.bulkedit=Bulk editing
 tvshow.bulkedit.desc=Change genres, tags of selected TV shows and/or watched flag, season of selected TV episodes 
 tvshow.scrapeepisodeseasondata=Scrape season & episode data
-tvshow.update=Update TV show 
+tvshow.update=Update selected TV show(s) 
 tvshow.rewritenfo=Rewrite NFO for selected TV show(s)
 tvshow.rename=Rename/cleanup selected TV show(s)/episode(s)
 
