feature: added collapse all /expand all nodes for tv show tree

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -414,3 +414,6 @@ message.movie.searcherror=Search movie failed{} {}
 message.erroropenfile=Could not open file{} {}
 message.erroropenfolder=Could not open folder{} {}
 message.erroropenurl=Could not open URL{} {}  
+
+tree.collapseall=Collapse all nodes
+tree.expandall=Expand all nodes
